Add(currency/utils): port more commands to slash